--- a/Lab02ATM.Tests/Lab02ATM.Tests.csproj
+++ b/Lab02ATM.Tests/Lab02ATM.Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LabATM\LabATM.csproj" />
+  </ItemGroup>
+
 </Project>
